[tool.poetry]
name = "cylang"
version = "0.1.0"
description = "A python module to use Cython as your main language"
authors = ["Federico Simonetta <federico.simonetta@unimi.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.21"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
